Fixes (#79)
* remove jdk14 preview features because IDEA stops support

* fix chart date formatting